app/assets/stylesheets/table-list.tailwind.css
@layer components {
    .table-legend {
        @apply sm:flex sm:items-center p-5;
    }

    .table-legend .table-legend-description {
        @apply sm:flex-auto;
    }

    .table-legend .table-legend-description h1 {
        @apply text-base font-semibold leading-6;
    }

    .table-legend .table-legend-description p {
        @apply mt-2 text-sm text-gray-700 dark:text-gray-300;
    }

    .table-legend .table-legend-buttons-container {
        @apply mt-4 sm:ml-16 sm:mt-0 sm:flex-none;
    }

    .table-list {
        @apply w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400;
    }

    .table-list thead {
        @apply text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400;
    }

    .table-list tbody tr {
        @apply bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600;
    }

    .table-list thead tr th {
        @apply px-6 py-3;
    }

    .table-list tbody tr td {
        @apply px-6 py-4 align-top;
    }

    .table-list tbody tr th {
        @apply flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white;
    }

    .table-list tbody tr th > div {
        @apply max-w-xs xl:max-w-md;
    }

    .table-list form.button_to {
        @apply inline-block;
    }
}

